<resources>
    <string name="app_name">GroupProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_display_name">display name</string>
    <string name="action_avatar">avatar</string>
    <string name="action_sign_up">sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="Bye">Bye</string>

    <string-array name="categorys">
        <item>Foot</item>
        <item>Phone And Net</item>
        <item>Home</item>
        <item>Transportation</item>
        <item>Game</item>
        <item>Book</item>
    </string-array>
</resources>